# python-vs-cpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/: deployment.json
.github/workflows/: __reusable_deploy_check_flag.yml  _reusable_build_wheels.yml  _reusable_deploy_check_flag.yml  _reusable_unit_test_linter.yml  branch_development.yml  pr_to_main.yml  prod_deploy.yml  unit_test_linter.yml
cpp/include/: loop_speed.hpp
cpp/src/: bindings.cpp  loop_speed.cpp
examples/: getting_started.ipynb
scripts/: check_deployment.py  check_pypi_version.py
src/python_vs_cpp/api/: __init__.py  loop_speed.py
src/python_vs_cpp/loop_clocking/: __init__.py  cpp_loop_speed.py  python_loop_speed.py
src/python_vs_cpp_speed/: __init__.py
tests/test_cpp/: test_loop_speed.cpp
tests/test_py/test_api/: test_api.py
tests/test_py/test_loop_clocking/: test_loop_clocking.py
